--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,7 @@
-.container {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.container{
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
   width: 500px;
   height: 500px;
   background: chocolate;
@@ -16,24 +9,19 @@
   margin-top: 150px;
 }
 
-.container .buton {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
+  .buton{
+      display: flex;
+      flex-direction: row;
+  }
 
-.container #calculate {
-  width: 100px;
-  height: 30px;
-}
+  #calculate{
+      width: 100px;
+      height: 30px;
+  }
 
-.container #toplam {
-  color: #fff;
-  margin-top: 30px;
-  font-size: 50px;
-}
-/*# sourceMappingURL=styles.css.map */
+  #toplam{
+      color: #fff;
+      margin-top: 30px;
+      font-size: 50px;
+      text-align: center;
+  }
